[project]
name = "pdf-template-gen"
version = "0.1.0"
description = ""
authors = [
    {name = "Ran00dom",email = "rran00domm@gmail.com"}
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
reportlab = "^4.5.1"
xhtml2pdf = "^0.2.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
